@@ -1,6 +1,9 @@
 package com.art.tutordesk.student.service;
 
+import com.art.tutordesk.payment.Currency;
 import com.art.tutordesk.student.Student;
+import com.art.tutordesk.student.StudentDto;
+import com.art.tutordesk.student.StudentMapper;
 import com.art.tutordesk.student.StudentRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -9,6 +12,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -22,6 +26,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -34,86 +40,139 @@ class StudentServiceTest {
     private StudentRepository studentRepository;
     @Mock
     private StudentHardDeleteService studentHardDeleteService;
+    @Mock
+    private StudentMapper studentMapper;
 
     @InjectMocks
     private StudentService studentService;
 
     private Student student1;
     private Student student2;
+    private StudentDto studentDto1;
+    private StudentDto studentDto2;
 
     @BeforeEach
     void setUp() {
-        student1 = createStudent(1L, "John", "Doe", true);
-        student2 = createStudent(2L, "Jane", "Smith", false);
+        student1 = new Student();
+        student1.setId(1L);
+        student1.setFirstName("John");
+        student1.setLastName("Doe");
+        student1.setActive(true);
+
+        studentDto1 = createStudentDto(1L, "John", "Doe", true);
+
+        student2 = new Student();
+        student2.setId(2L);
+        student2.setFirstName("Jane");
+        student2.setLastName("Smith");
+        student2.setActive(false);
+
+        studentDto2 = createStudentDto(2L, "Jane", "Smith", false);
     }
 
     @Test
     void saveStudent_shouldSaveNewStudent() {
-        Student newStudent = createStudent(null, "New", "Student", true);
-        when(studentRepository.save(any(Student.class))).thenReturn(student1);
+        StudentDto newStudentDto = createStudentDto(null, "New", "Student", true);
+        Student newStudentEntity = new Student();
+        newStudentEntity.setFirstName(newStudentDto.getFirstName());
+        newStudentEntity.setLastName(newStudentDto.getLastName());
+        newStudentEntity.setActive(true);
+        newStudentEntity.setId(10L);
 
-        Student result = studentService.saveStudent(newStudent);
+        when(studentMapper.toStudent(newStudentDto)).thenReturn(newStudentEntity);
+        when(studentRepository.save(any(Student.class))).thenReturn(newStudentEntity);
+        when(studentMapper.toStudentDto(newStudentEntity)).thenReturn(newStudentDto);
+
+        StudentDto result = studentService.saveStudent(newStudentDto);
 
         assertNotNull(result);
-        assertEquals(student1.getId(), result.getId());
-        verify(studentRepository, times(1)).save(newStudent);
+        assertEquals(newStudentDto.getFirstName(), result.getFirstName());
+        verify(studentMapper, times(1)).toStudent(newStudentDto);
+        verify(studentRepository, times(1)).save(newStudentEntity);
+        verify(studentMapper, times(1)).toStudentDto(newStudentEntity);
     }
 
     @Test
     void saveStudent_shouldUpdateExistingStudent() {
-        Student existingStudent = createStudent(1L, "Updated", "Name", true);
-        when(studentRepository.save(any(Student.class))).thenReturn(existingStudent);
+        StudentDto existingStudentDto = createStudentDto(1L, "Updated", "Name", true);
+        Student existingStudentEntity = new Student();
+        existingStudentEntity.setId(1L);
+        existingStudentEntity.setFirstName("John");
+        existingStudentEntity.setLastName("Doe");
+        existingStudentEntity.setActive(true);
 
-        Student result = studentService.saveStudent(existingStudent);
+        when(studentRepository.findById(1L)).thenReturn(Optional.of(existingStudentEntity));
+        doAnswer(invocation -> {
+            Student target = invocation.getArgument(1);
+            target.setFirstName(existingStudentDto.getFirstName());
+            target.setLastName(existingStudentDto.getLastName());
+            target.setActive(existingStudentDto.isActive());
+            return null;
+        }).when(studentMapper).updateStudentFromDto(eq(existingStudentDto), any(Student.class));
+        when(studentRepository.save(existingStudentEntity)).thenReturn(existingStudentEntity);
+        when(studentMapper.toStudentDto(existingStudentEntity)).thenReturn(existingStudentDto);
+
+        StudentDto result = studentService.saveStudent(existingStudentDto);
 
         assertNotNull(result);
-        assertEquals(existingStudent.getFirstName(), result.getFirstName());
-        verify(studentRepository, times(1)).save(existingStudent);
+        assertEquals(existingStudentDto.getFirstName(), result.getFirstName());
+        verify(studentRepository, times(1)).findById(1L);
+        verify(studentMapper, times(1)).updateStudentFromDto(eq(existingStudentDto), any(Student.class));
+        verify(studentRepository, times(1)).save(existingStudentEntity);
+        verify(studentMapper, times(1)).toStudentDto(existingStudentEntity);
     }
 
     @Test
     void getAllActiveStudents_shouldReturnEmptyList() {
         when(studentRepository.findAllByActiveTrueOrderByIdAsc()).thenReturn(Collections.emptyList());
 
-        List<Student> result = studentService.getAllActiveStudents();
+        List<StudentDto> result = studentService.getAllActiveStudents();
 
         assertTrue(result.isEmpty());
         verify(studentRepository, times(1)).findAllByActiveTrueOrderByIdAsc();
+        verify(studentMapper, never()).toStudentDto(any(Student.class));
     }
 
     @Test
     void getAllActiveStudents_shouldReturnActiveStudents() {
         List<Student> activeStudents = Collections.singletonList(student1);
         when(studentRepository.findAllByActiveTrueOrderByIdAsc()).thenReturn(activeStudents);
+        when(studentMapper.toStudentDto(student1)).thenReturn(studentDto1);
 
-        List<Student> result = studentService.getAllActiveStudents();
+        List<StudentDto> result = studentService.getAllActiveStudents();
 
         assertFalse(result.isEmpty());
         assertEquals(1, result.size());
-        assertEquals(student1.getFirstName(), result.get(0).getFirstName());
+        assertEquals(studentDto1.getFirstName(), result.getFirst().getFirstName());
         verify(studentRepository, times(1)).findAllByActiveTrueOrderByIdAsc();
+        verify(studentMapper, times(1)).toStudentDto(student1);
     }
 
     @Test
     void getAllStudentsIncludingInactive_shouldReturnEmptyList() {
         when(studentRepository.findAll()).thenReturn(Collections.emptyList());
 
-        List<Student> result = studentService.getAllStudentsIncludingInactive();
+        List<StudentDto> result = studentService.getAllStudentsIncludingInactive();
 
         assertTrue(result.isEmpty());
         verify(studentRepository, times(1)).findAll();
+        verify(studentMapper, never()).toStudentDto(any(Student.class));
     }
 
     @Test
     void getAllStudentsIncludingInactive_shouldReturnAllStudents() {
         List<Student> allStudents = Arrays.asList(student1, student2);
         when(studentRepository.findAll()).thenReturn(allStudents);
+        when(studentMapper.toStudentDto(student1)).thenReturn(studentDto1);
+        when(studentMapper.toStudentDto(student2)).thenReturn(studentDto2);
 
-        List<Student> result = studentService.getAllStudentsIncludingInactive();
+        List<StudentDto> result = studentService.getAllStudentsIncludingInactive();
 
         assertFalse(result.isEmpty());
         assertEquals(2, result.size());
         verify(studentRepository, times(1)).findAll();
+        verify(studentMapper, times(1)).toStudentDto(student1);
+        verify(studentMapper, times(1)).toStudentDto(student2);
     }
 
     @Test
@@ -146,7 +205,7 @@ class StudentServiceTest {
 
     @Test
     void activateStudent_shouldActivateInactiveStudent() {
-        student2.setActive(false); // Ensure student is inactive for the test
+        student2.setActive(false);
         when(studentRepository.findById(anyLong())).thenReturn(Optional.of(student2));
         when(studentRepository.save(any(Student.class))).thenReturn(student2);
 
@@ -169,12 +228,14 @@ class StudentServiceTest {
     @Test
     void getStudentById_shouldReturnStudent_whenFound() {
         when(studentRepository.findById(anyLong())).thenReturn(Optional.of(student1));
+        when(studentMapper.toStudentDto(student1)).thenReturn(studentDto1);
 
-        Student result = studentService.getStudentById(student1.getId());
+        StudentDto result = studentService.getStudentById(student1.getId());
 
         assertNotNull(result);
-        assertEquals(student1.getId(), result.getId());
+        assertEquals(studentDto1.getId(), result.getId());
         verify(studentRepository, times(1)).findById(student1.getId());
+        verify(studentMapper, times(1)).toStudentDto(student1);
     }
 
     @Test
@@ -183,6 +244,7 @@ class StudentServiceTest {
 
         assertThrows(RuntimeException.class, () -> studentService.getStudentById(anyLong()));
         verify(studentRepository, times(1)).findById(anyLong());
+        verify(studentMapper, never()).toStudentDto(any(Student.class));
     }
 
     @Test
@@ -208,12 +270,15 @@ class StudentServiceTest {
         verify(studentRepository, times(1)).findAllByIdIn(ids);
     }
 
-    private Student createStudent(Long id, String firstName, String lastName, boolean active) {
-        Student student = new Student();
+    private StudentDto createStudentDto(Long id, String firstName, String lastName, boolean active) {
+        StudentDto student = new StudentDto();
         student.setId(id);
         student.setFirstName(firstName);
         student.setLastName(lastName);
         student.setActive(active);
+        student.setPriceIndividual(BigDecimal.valueOf(50.00));
+        student.setPriceGroup(BigDecimal.valueOf(30.00));
+        student.setCurrency(Currency.USD);
         return student;
     }
 }
